--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.3.0",
     "next": "15.3.1",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
@@ -26,7 +32,12 @@
     "@eslint/eslintrc": "^3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@tailwindcss/postcss": "^4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^20.17.31",
+    "@types/passport": "^1.0.17",
+    "@types/passport-facebook": "^3.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
