--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
+    "@types/socket.io-client": "^1.4.36",
     "class-variance-authority": "^0.7.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -25,6 +26,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.22.0",
     "zustand": "^4.4.0"
   },
