--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mongodb": "^6.3.0",
+    "mongodb": "^4.17.0",
+    "mongodb-memory-server": "^10.1.4",
     "next": "15.3.1",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
@@ -38,6 +39,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.17.31",
     "@types/passport": "^1.0.17",
     "@types/passport-facebook": "^3.0.3",
