--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
         "./lib/*"
       ]
     },
+    "outDir": "./dist",
+    "rootDir": "./src",
+    
     "target": "ES2017",
     "lib": [
       "dom",
@@ -17,7 +20,7 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
@@ -31,6 +34,7 @@
         "name": "next"
       }
     ]
+    
   },
   "include": [
     "next-env.d.ts",
