--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^20.17.31",
+    "@types/node": "^20.17.37",
     "@types/passport": "^1.0.17",
     "@types/passport-facebook": "^3.0.3",
     "@types/react": "^19",
@@ -55,7 +55,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.8",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
