--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mongodb": "^4.17.2",
+    "mongodb": "^6.16.0",
     "mongodb-memory-server": "^10.1.4",
     "next": "15.3.1",
     "passport": "^0.7.0",
@@ -58,5 +58,13 @@
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5.8.3"
+  },
+  "optionalDependencies": {
+    "@mongodb-js/zstd": "^2.0.1",
+    "aws4": "^1.13.2",
+    "bson-ext": "^4.0.3",
+    "kerberos": "^2.2.2",
+    "mongodb-client-encryption": "^6.3.0",
+    "snappy": "^7.2.2"
   }
 }
