--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mongodb": "5.8.1",
+    "install": "0.13.0",
+    "mongodb": "^6.16.0",
     "mongodb-memory-server": "^10.1.4",
-    "next": "^15.3.1",
+    "next": "15.3.1",
+    "npm": "11.3.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
@@ -60,7 +62,11 @@
     "typescript": "^5.8.3"
   },
   "optionalDependencies": {
+    "@mongodb-js/zstd": "^2.0.1",
     "aws4": "^1.13.2",
-    "bson-ext": "^4.0.3"
+    "bson-ext": "^4.0.3",
+    "kerberos": "^2.2.2",
+    "mongodb-client-encryption": "^6.3.0",
+    "snappy": "^7.2.2"
   }
 }
