--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb-memory-server": "^10.1.4",
     "next": "15.3.1",
     "npm": "11.3.0",
+    "openai": "^4.98.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "react": "^19.0.0",
