--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "install": "0.13.0",
-    "mongodb-memory-server": "^10.1.4",
-    "next": "15.3.1",
+    "mongodb": "^6.16.0",
+    "next": "^15.3.0",
     "npm": "11.3.0",
     "openai": "^4.98.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
@@ -41,8 +41,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
-    "@types/mongodb": "^4.0.7",
-    "@types/node": "^20.17.41",
+    "@types/node": "^20.0.0",
     "@types/passport": "^1.0.17",
     "@types/passport-facebook": "^3.0.3",
     "@types/react": "^19",
@@ -59,6 +58,7 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.8",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "webpack": "^5.88.2"
   }
 }
