--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
+    "@supabase/supabase-js": "^2.50.2",
     "@types/socket.io-client": "^1.4.36",
     "class-variance-authority": "^0.7.1",
     "cors": "^2.8.5",
@@ -20,7 +21,6 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "install": "0.13.0",
-    "mongodb": "^6.16.0",
     "next": "^15.3.0",
     "npm": "11.3.0",
     "openai": "^4.98.0",
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
+    "swr": "^2.3.3",
     "zod": "^3.22.0",
     "zustand": "^4.4.0"
   },
