--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.1",
     "install": "0.13.0",
     "next": "^15.3.0",
+    "next-themes": "^0.4.6",
     "npm": "11.3.0",
     "openai": "^4.98.0",
     "passport": "^0.7.0",
@@ -31,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
+    "sonner": "^2.0.6",
     "swr": "^2.3.3",
     "zod": "^3.22.0",
     "zustand": "^4.4.0"
