--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -36,6 +37,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.1",
