--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "install": "0.13.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "npm": "11.3.0",
     "openai": "^4.98.0",
     "passport": "^0.7.0",
