fix(auth): update Next/React and refactor middleware authentication

--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "install": "0.13.0",
-    "next": "^15.3.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
     "npm": "11.3.0",
     "openai": "^5.23.2",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "react": "^18.2.0",
+    "react": "^19.2.1",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.1",
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
@@ -67,7 +67,7 @@
     "@typescript-eslint/parser": "^8.31.0",
     "clsx": "^2.1.1",
     "eslint": "^9.25.1",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^16.1.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
     "recharts": "^2.15.1",
